<resources>
    <string name="app_name">Where To Eat?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="find">Find</string>
    <string name="profile">Profile</string>
    <string name="where_to_eat">Where To Eat?</string>
    <string name="find_fragment">Find Fragment</string>
    <string name="help_will_be_here_soon">Help will be here soon:)</string>
    <string name="welcome">Welcome</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="help">Help</string>
    <string name="create_one">Create one</string>
    <string name="name">Name</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New password</string>
    <string name="new_password_again">New password again</string>
    <string name="save">Save</string>
    <string name="sign_up">Sign Up</string>
    <string name="start_the_journey">Start the journey:)</string>
    <string name="log_out">Log Out</string>
    <string name="where_would_you_like_to_go">Where would you like to go?</string>
    <string name="distance_1_5_km">Distance: 1.5 km</string>
    <string name="restaurant_name">Restaurant Name</string>
</resources>