<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signUp.SignUpFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageButton
            android:id="@+id/backArrow"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:src="@drawable/baseline_arrow_back_24"
            android:layout_gravity="start|center"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/textLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/sign_up"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textStartThe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        android:text="@string/start_the_journey"
        android:layout_marginTop="16sp"
        android:layout_marginStart="16sp"
        android:textSize="26sp">

    </TextView>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="220sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35sp"
        android:hint="@string/name"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textStartThe">

    </EditText>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="220sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:hint="@string/e_mail"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextName">

    </EditText>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="220sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail">

    </EditText>

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
        android:layout_marginTop="16sp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="16sp">

    </Button>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/icon"
        app:layout_constraintBottom_toTopOf="@+id/textHelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignup" />

    <TextView
        android:id="@+id/textHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16sp"
        android:clickable="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/help"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </TextView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="invisible" />


</androidx.constraintlayout.widget.ConstraintLayout>