<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/backArrow"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_marginStart="16sp"
            android:layout_marginTop="16sp"
            android:background="@color/white"
            android:src="@drawable/baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ImageButton>

        <TextView
            android:id="@+id/textSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/textChangePassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/backArrow"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:text="@string/change_password"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/backArrow"
            app:layout_constraintTop_toBottomOf="@id/backArrow">

        </TextView>


        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="220sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textChangePassword">

        </EditText>

        <EditText
            android:id="@+id/editTextPasswordAgain"
            android:layout_width="220sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:hint="@string/new_password_again"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextPassword">

        </EditText>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/save"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@id/editTextPasswordAgain"
            app:layout_constraintTop_toBottomOf="@id/editTextPasswordAgain">

        </Button>

        <ImageButton
            android:id="@+id/buttonLogOut"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_marginEnd="64dp"
            android:layout_marginBottom="56dp"
            android:src="@drawable/baseline_logout_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@drawable/logo_text"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogOut"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSave" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>